2008-03-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* coding.c (decode_coding_object): When not decoding into a buffer,
	obey the coding system's preference of (uni|multi)byte.

2008-03-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* casefiddle.c (casify_object): Avoid pathological N^2 worst case if
	every char is changed and has a different byte-length.
	(Fupcase_word, Fdowncase_word, Fcapitalize_word, operate_on_word):
	Fix int -> EMACS_INT.

2008-03-23  David Hansen  <david.hansen@gmx.net>  (tiny change)

	* dbusbind.c (xd_read_message): Remove extra copying of message
	strings.  Check for NULL `interface' or `member'.

2008-03-22  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (readdir): If FindFirstFile/FindNextFile return in
	cFileName a file name that includes `?' characters, use the 8+3
	alias in cAlternateFileName instead.

2008-03-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* buffer.c (enlarge_buffer_text): Fix int -> EMACS_INT.

2008-03-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* intervals.c (temp_set_point, temp_set_point_both): Use EMACS_INT.
	(set_point, set_point_both): Use EMACS_INT.  Remove `buffer' arg,
	work on current_buffer only instead (that was already the case
	for some of the code anyway).
	* buffer.h (set_point, set_point_both): Remove buffer arg, use long int.
	(temp_set_point, temp_set_point_both): Use EMACS_INT.
	(SET_PT, SET_PT_BOTH): Adjust.
	* intervals.h (set_point, temp_set_point, set_point_both)
	(temp_set_point_both): Remove redundant declarations.

2008-03-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* fileio.c (Finsert_file_contents):
	* lread.c (Feval_buffer): Use BUF_TEMP_SET_PT.
	* buffer.h (BUF_SET_PT): Remove.  set_point_both doesn't work right
	when buffer != current_buffer anyway.

2008-03-20  Andreas Schwab  <schwab@suse.de>

	* callint.c (Fcall_interactively) [case 'B']: Use other-buffer
	as default.

2008-03-19  Jason Rumney  <jasonr@gnu.org>
